fix: Fixed lessons name

--- a/docs/eda/distribuzione-natura-dati.mdx
+++ b/docs/eda/distribuzione-natura-dati.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# EDA: Comprendere distribuzione e natura dei dati
+# Comprendere distribuzione e natura dei dati
 Argomenti: distribuzioni, scatter plots, correlazioni, box plots, istogrammi.
 
 ## Intro
