--- a/docs/pandas/filtraggio-e-selezione-dati.mdx
+++ b/docs/pandas/filtraggio-e-selezione-dati.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 4
 --- 
 
-# Pandas: Filtraggio e selezione di dati
+# Filtraggio e selezione di dati
 Argomenti: selezione di colonne, selezione di righe, filtraggio condizionale.
 
 ## Intro
