--- a/docs/pandas/rinominare-colonne-e-ordinare-dati.mdx
+++ b/docs/pandas/rinominare-colonne-e-ordinare-dati.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 5
 ---
 
-# Pandas: Rinominare colonne e ordinare i dati
+# Rinominare colonne e ordinare i dati
 Argomenti: `rename()`, `sort_values()`, `sort_index()`.
 
 ## Intro
