--- a/docs/matplotlib-e-seaborn/grafici-base.mdx
+++ b/docs/matplotlib-e-seaborn/grafici-base.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Matplotlib e Seaborn: Grafici base
+# Grafici base
 Argomenti: grafici a barre (`bar` e `barplot`), istogrammi (`hist` e `distplot`), scatter plot (`scatter` e `scatterplot`).
 
 ## Intro
