--- a/docs/matplotlib-e-seaborn/personalizzazione-grafici.mdx
+++ b/docs/matplotlib-e-seaborn/personalizzazione-grafici.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 2
 ---
 
-# Matplotlib e Seaborn: Personalizzazione base dei grafici
+# Personalizzazione base dei grafici
 Argomenti: titoli, etichette degli assi, legende, colori, stili.
 
 ## Intro
