--- a/docs/pandas/esplorazione-dei-dati.mdx
+++ b/docs/pandas/esplorazione-dei-dati.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 3
 ---
 
-# Pandas: Esplorazione dei dati
+# Esplorazione dei dati
 
 Argomenti: `head()`, `describe()`, `info()`
 
