fix: Added exercise title

--- a/docs/eda/curtosi-asimmetria-correlazione.mdx
+++ b/docs/eda/curtosi-asimmetria-correlazione.mdx
@@ -57,6 +57,8 @@ matrice_correlazione = data.corr()
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Calcola l'asimmetria e la curtosi per una delle tue variabili e rifletti su come i dati sono distribuiti.
 2.  Analizza la correlazione tra due variabili nel tuo set di dati.
 3.  Utilizza il metodo `corr()` per visualizzare una matrice di correlazione e individua le variabili fortemente correlate.
