--- a/docs/eda/distribuzione-natura-dati.mdx
+++ b/docs/eda/distribuzione-natura-dati.mdx
@@ -81,6 +81,8 @@ Ricorda che l'EDA è una fase esplorativa. Il suo obiettivo principale è famili
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Crea un istogramma per una delle tue variabili e interpreta la sua forma: è simmetrica? Ha una coda lunga su un lato?
 2.  Utilizza un box plot per identificare gli outlier in una variabile.
 3.  Crea uno scatter plot per due variabili e cerca eventuali tendenze o pattern.
