--- a/docs/eda/statistiche-descrittive.mdx
+++ b/docs/eda/statistiche-descrittive.mdx
@@ -60,6 +60,8 @@ data['colonna'].describe()
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Calcola la media, la mediana e la deviazione standard di una delle tue variabili.
 2.  Identifica i quartili per una variabile e rifletti su come i dati sono distribuiti.
 3.  Confronta le statistiche descrittive di due diverse colonne nel tuo set di dati.
