--- a/docs/manipolazione-dati/filtraggio-creazione-colonne.mdx
+++ b/docs/manipolazione-dati/filtraggio-creazione-colonne.mdx
@@ -52,6 +52,8 @@ L'uso del metodo `.apply()` è molto potente e ti permette di applicare qualsias
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Filtra il tuo DataFrame basandoti su specifiche condizioni. Prova a combinare più condizioni.
 2.  Crea una nuova colonna nel tuo DataFrame che rappresenti una combinazione di due colonne esistenti.
 3.  Usa una funzione personalizzata per trasformare una colonna e crea una nuova colonna con i risultati.
