--- a/docs/manipolazione-dati/tecniche-pulire-dati.mdx
+++ b/docs/manipolazione-dati/tecniche-pulire-dati.mdx
@@ -64,6 +64,8 @@ Mantieni sempre una copia del tuo dataset originale prima di iniziare la pulizia
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Identifica e gestisci i valori mancanti nel tuo dataset.
 2.  Esamina il tuo DataFrame per eventuali duplicati e decide come gestirli.
 3.  Controlla i tipi di dati delle colonne e converti dove necessario.
