--- a/docs/matplotlib-e-seaborn/grafici-base.mdx
+++ b/docs/matplotlib-e-seaborn/grafici-base.mdx
@@ -125,6 +125,8 @@ L'overplotting (eccesso di punti sovrapposti) in uno scatter plot può rendere d
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Crea un grafico a barre utilizzando sia Matplotlib che Seaborn. Prova a personalizzare l'aspetto del grafico (es. colori, titoli, etichette).
 2.  Genera un set di dati randomico e crea un istogramma per visualizzarne la distribuzione.
 3.  Utilizza uno scatter plot per esplorare la relazione tra due set di dati.
