--- a/docs/matplotlib-e-seaborn/personalizzazione-grafici.mdx
+++ b/docs/matplotlib-e-seaborn/personalizzazione-grafici.mdx
@@ -93,6 +93,8 @@ Ricorda che la semplicità è spesso la chiave. Mentre Matplotlib e Seaborn offr
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Crea un grafico di base e aggiungi un titolo, etichette per gli assi e una legenda.
 2.  Esperimenta con diversi stili e colori, sia in Matplotlib che in Seaborn.
 3.  Utilizza Seaborn per cambiare la palette di colori e lo stile di sfondo del tuo grafico.
