--- a/docs/pandas/filtraggio-e-selezione-dati.mdx
+++ b/docs/pandas/filtraggio-e-selezione-dati.mdx
@@ -57,6 +57,8 @@ Ricorda di mettere ogni condizione tra parentesi quando combini le condizioni.
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Crea un `DataFrame` a partire da un file CSV o da un dizionario. Seleziona una singola colonna e più colonne contemporaneamente.
 
 2.  Prova a selezionare una specifica riga utilizzando sia `.loc[]` che `.iloc[]`.
