--- a/docs/pandas/rinominare-colonne-e-ordinare-dati.mdx
+++ b/docs/pandas/rinominare-colonne-e-ordinare-dati.mdx
@@ -57,6 +57,8 @@ Quando ordini i dati, Pandas non modifica il DataFrame originale a meno che tu n
 
 ## Esercizi
 
+### Esercizio 1
+
 1.  Crea un `DataFrame` a partire da un file CSV o da un dizionario. Rinomina almeno due delle sue colonne.
 
 2.  Ordina il tuo `DataFrame` in base ai valori di una colonna, sia in ordine ascendente che discendente.
