--- a/docs/extras/mentors.mdx
+++ b/docs/extras/mentors.mdx
@@ -7,10 +7,68 @@ sidebar_position: 1
 Mentor e mentee possono avere un legame molto importante e duraturo, anche dopo la conclusione del bootcamp. 
 Cliccando sull'immagine di ogni mentor sarà possibile accedere al relativo profilo LinkedIn.
 
-## Ludovico Besana 
+## Lorem ipsum
 
-<a href="https://www.linkedin.com/in/ludovicobesana/">
+<a href="https://www.linkedin.com/in/#/">
 
-![Ludovico Besana](./img/mentors-shetech/ludovico-besana.png)
+![Lorem ipsum](./img/mentors-shetech/image-2.png)
 
 </a>
+
+## Lorem ipsum
+
+<a href="https://www.linkedin.com/in/#/">
+
+![Lorem ipsum](./img/mentors-shetech/image-1.png)
+
+</a>
+
+## Ludovico Besana
+
+<a href="https://www.linkedin.com/in/#/ludovicobesana">
+
+![Lorem ipsum](./img/mentors-shetech/ludovico-besana.png)
+
+</a>
+
+## Lorem ipsum
+
+<a href="https://www.linkedin.com/in/#/">
+
+![Lorem ipsum](./img/mentors-shetech/image-4.png)
+
+</a>
+
+## Lorem ipsum
+
+<a href="https://www.linkedin.com/in/#/">
+
+![Lorem ipsum](./img/mentors-shetech/image-5.png)
+
+</a>
+
+
+## Lorem ipsum
+
+<a href="https://www.linkedin.com/in/#/">
+
+![Lorem ipsum](./img/mentors-shetech/image-6.png)
+
+</a>
+
+## Lorem ipsum
+
+<a href="https://www.linkedin.com/in/#/">
+
+![Lorem ipsum](./img/mentors-shetech/image-7.png)
+
+</a>
+
+## Lorem ipsum
+
+<a href="https://www.linkedin.com/in/#/">
+
+![Lorem ipsum](./img/mentors-shetech/image-8.png)
+
+</a>
+
