fix: Fixed with feedbacks

--- a/docs/extras/mentors.mdx
+++ b/docs/extras/mentors.mdx
@@ -7,21 +7,17 @@ sidebar_position: 1
 Mentor e mentee possono avere un legame molto importante e duraturo, anche dopo la conclusione del bootcamp. 
 Cliccando sull'immagine di ogni mentor sarà possibile accedere al relativo profilo LinkedIn.
 
-## Lorem ipsum
+## Valentina Capradossi
 
-<a href="https://www.linkedin.com/in/#/">
+<a href="https://www.linkedin.com/in/valentina-capradossi/">
 
-![Lorem ipsum](./img/mentors-shetech/image-2.png)
-
-</a>
-
-## Lorem ipsum
-
-<a href="https://www.linkedin.com/in/#/">
-
-![Lorem ipsum](./img/mentors-shetech/image-1.png)
+![Valentina Capradossi](./img/mentors-shetech/image-2.png)
 
 </a>
+
+## Marina Caporlingua
+
+![Marina Caporlingua](./img/mentors-shetech/image-1.png)
 
 ## Ludovico Besana
 
@@ -31,44 +27,40 @@ Cliccando sull'immagine di ogni mentor sarà possibile accedere al relativo prof
 
 </a>
 
-## Lorem ipsum
+## Miriam Dessi
 
-<a href="https://www.linkedin.com/in/#/">
+<a href="https://www.linkedin.com/in/dessimiriam/">
 
-![Lorem ipsum](./img/mentors-shetech/image-4.png)
-
-</a>
-
-## Lorem ipsum
-
-<a href="https://www.linkedin.com/in/#/">
-
-![Lorem ipsum](./img/mentors-shetech/image-5.png)
+![Miriam Dessi](./img/mentors-shetech/image-4.png)
 
 </a>
 
+## Adriana Cano
 
-## Lorem ipsum
+<a href="https://www.linkedin.com/in/adriana-cano/">
 
-<a href="https://www.linkedin.com/in/#/">
-
-![Lorem ipsum](./img/mentors-shetech/image-6.png)
-
-</a>
-
-## Lorem ipsum
-
-<a href="https://www.linkedin.com/in/#/">
-
-![Lorem ipsum](./img/mentors-shetech/image-7.png)
+![Adriana Cano](./img/mentors-shetech/image-5.png)
 
 </a>
 
-## Lorem ipsum
 
-<a href="https://www.linkedin.com/in/#/">
+## Carlotta Schezzini
 
-![Lorem ipsum](./img/mentors-shetech/image-8.png)
+![Carlotta Schezzini](./img/mentors-shetech/image-6.png)
+
+## Anna Tripodi
+
+<a href="https://www.linkedin.com/in/anna-tripodi-57a29a6b/">
+
+![Anna Tripodi](./img/mentors-shetech/image-7.png)
+
+</a>
+
+## Sara Carlucci
+
+<a href="https://www.linkedin.com/in/sara-carlucci-8aab9a122/">
+
+![Sara Carlucci](./img/mentors-shetech/image-8.png)
 
 </a>
 
