--- a/docs/python-i/condizioni-e-cicli.mdx
+++ b/docs/python-i/condizioni-e-cicli.mdx
@@ -74,4 +74,4 @@ In un editor Python, scrivi un programma che stampa tutti i numeri pari da 0 a 1
 
 Congratulazioni! 🎉
 
-Ora ti aspetta la pausa pranzo. Buon appetito! 🍴
+Hai appreso le fondamenta delle istruzioni di controllo del flusso in Python. 
