feat: Add serena sgro

--- a/docs/extras/mentors.mdx
+++ b/docs/extras/mentors.mdx
@@ -35,6 +35,16 @@ Cliccando sull'immagine di ogni mentor sarà possibile accedere al relativo prof
 
 </a>
 
+
+## Serena Sgrò
+
+<a href="https://www.linkedin.com/in/serena-sgr%C3%B2/">
+
+![Serena Sgrò](./img/mentors-shetech/serena-srgrò.png)
+
+</a>
+
+
 ## Adriana Cano
 
 <a href="https://www.linkedin.com/in/adriana-cano/">
