--- a/docs/progetto-finale/traccia.mdx
+++ b/docs/progetto-finale/traccia.mdx
@@ -1,28 +1,43 @@
 ---
 sidebar_position: 1
 ---
+import { DownloadLink } from './DownloadLink';
 
 # Manipolazione Dati nel Retail 
 Argomenti: Data Gathering, Data Understanding, Data Manipulation
 
-Ciao **Pythoner**!
+# Intro
+
+Ciao **Pythoner**! 👋
 
 Sei arrivata/o alla fine di questo viaggio, è ora di sporcarsi le mani!
 
 Per ricevere il timbro da domatore di questo simpatico serpente, dovrai superare qualche prova.
 
-Di seguito troverai un dataset e una serie di istruzioni, buon lavoro!
+## 1. Setup: Prepariamoci all'Analisi
 
-Link al dataset: lorem
+Prima di tutto, un caloroso "buon lavoro" da parte nostra. Ti abbiamo preparato un dataset interessante e una serie di istruzioni per guidarti nell'analisi.
 
-**Data Gathering** - In questa fase l'obiettivo è prendere confidenza con i dati, di cosa stiamo parlando? Come è costruito il dataset?
+Per accedere al dataset, clicca sul link di download qui sotto.
 
-1.  **Preliminary Steps**:
+<p>
+<DownloadLink />
+</p>
+
+:::tip 
+Una volta scaricato il dataset, assicurati di posizionarlo in una directory facilmente accessibile. Questo semplificherà molto la fase di importazione dei dati nel tuo codice.
+:::
+
+
+ ## 2. Data Gathering 
+In questa fase l'obiettivo è prendere confidenza con i dati, di cosa stiamo parlando? Come è costruito il dataset?
+
+### Preliminary Steps:
 
 1.  Importa i pacchetti di cui pensi di aver bisogno (puoi tornare qui anche più avanti, quando avrai bisogno di usarli!)
 2.  Importa il dataset
 
-3.  **Schema e struttura**:
+### Schema e struttura:
 
 1.  Dai un'occhiata alle colonne, quali sono i loro *nomi*? Di che *tipo* sono? Puoi già provare ad indovinarne il contenuto!
 2.  Dai un'occhiata ai dati, guardane una porzione, bastano poche righe (le *prime* o le* ultime*)
@@ -31,20 +46,21 @@ Link al dataset: lorem
 5.  Guarda i principali *conteggi* delle valorizzazioni di alcune variabili categoriche, sia in numeriche assolute che in percentuale
 6.  *Ordina* le righe come è più intuitivo per te, sulla base della tua comprensione fino ad ora!
 
-5.  **Data cleaning**:
+### Data cleaning:
 
 1.  *Rinomina* alcune colonne potrebbero non essere parlanti, rinominale come ritieni più opportuno
 2.  Ci sono dei *duplicati*? Controlla!
 3.  Ci sono dei *null*? In quali colonne? Come li filleresti?
 
-**Data Understanding** - In questa fase esploreremo visivamente e con maggior dettaglio i nostri dati!
+## 3. Data Understanding
+In questa fase esploreremo visivamente e con maggior dettaglio i nostri dati!
 
-1.  **Categorical Features**
+### Categorical Features
 
 1.  Fai un *grafico con i contegg*i di una variabile categorica (o anche più di uno, se lo ritieni utile!). Ci sono vari modi per farlo, se hai tempo a disposizione prova a seguire più strade, è spesso molto formativo!
 2.  Fai un *grafico con la distribuzione* di una variabile categorica (o anche più di uno, se lo ritieni utile!), prova un box plot ad esempio!
 
-3.  **Numerical Features**
+###  Numerical Features
 
 1.  Fai un *grafico con la distribuzione* di una variabile numerica (o anche più di uno, se lo ritieni utile!)
 2.  Prova a vedere come di relazionano *due variabili *tra di loro!
@@ -53,7 +69,8 @@ Link al dataset: lorem
 5.  Di ciascuna feature numerica, prova a calcolare *media*, *mediana*, *deviazione standard*
 6.  Di ciascuna feature numerica, prova a calcolare *curtosi *ed *asimmetria*
 
-**Data Manipulation** - Adesso gioca e manipola i tuoi dati!
+## 4. Data Manipulation
+Adesso gioca e manipola i tuoi dati!
 
 1.  *Filtra* il tuo dataset tenendo solo le righe in cui una data colonna numerica è > 0
 2.  Crea una *nuova colonna  *che sia una combinazione di quelle esistenti
