Add gabriele sanna mentor

--- a/docs/extras/mentors.mdx
+++ b/docs/extras/mentors.mdx
@@ -61,5 +61,11 @@ Cliccando sull'immagine di ogni mentor sarà possibile accedere al relativo prof
 
 </a>
 
+## Gabriele Sanna
 
+<a href="https://www.linkedin.com/in/gabriele-sanna-b51b68174">
+
+![Anna Tripodi](./img/mentors-shetech/gabriele-sanna.png)
+
+</a>
 
