Fix Fixed typo error

--- a/docs/extras/mentors.mdx
+++ b/docs/extras/mentors.mdx
@@ -65,7 +65,7 @@ Cliccando sull'immagine di ogni mentor sarà possibile accedere al relativo prof
 
 <a href="https://www.linkedin.com/in/gabriele-sanna-b51b68174">
 
-![Anna Tripodi](./img/mentors-shetech/gabriele-sanna.png)
+![Gabriele Sanna](./img/mentors-shetech/gabriele-sanna.png)
 
 </a>
 
