feat: Add solutions and refactoring download link

--- a/docs/progetto-finale/traccia.mdx
+++ b/docs/progetto-finale/traccia.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 1
 ---
-import { DownloadLink } from './DownloadLink';
+import DownloadLink from './DownloadLink';
 
 # Manipolazione Dati nel Retail 
 Argomenti: Data Gathering, Data Understanding, Data Manipulation
@@ -21,7 +21,7 @@ Prima di tutto, un caloroso "buon lavoro" da parte nostra. Ti abbiamo preparato 
 Per accedere al dataset, clicca sul link di download qui sotto.
 
 <p>
-<DownloadLink />
+<DownloadLink label="Scarica il dataset" />
 </p>
 
 :::tip 
